--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,9 +1,10 @@
-baseURL: ''
+baseURL: "https://crispy-capybara-9657wvpj792756j-1313.app.github.dev/"
+
 title: Familie Kienzler
 languageCode: de-de
 DefaultContentLanguage: de
 enableEmoji: true
-enableGitInfo: true
+enableGitInfo: false
 enableRobotsTXT: true
 canonifyURLs: false
 paginate: 9
@@ -14,20 +15,21 @@ enableInlineShortcodes: true
 params:
   author: Andreas Kienzler
   authorimage: ../assets/images/global/author.webp
-  og_image: /images/tailbliss-cover.png
-  moto: "(...) Und der kleine Prinz kam zum Fuchs zurück: \"Adieu\", sagte er. \"Adieu\" sagte der Fuchs. \"Hier mein Geheimnis. Es ist ganz einfach: Man sieht nur mit dem Herzen gut. Das Wesentliche ist für die Augen unsichtbar.\" "
-  description: "\"Das Wesentliche ist für die Augen unsichtbar\" wiederholte der kleine Prinz, um es sich zu merken. (...) \"Die Menschen haben diese Wahrheit vergessen\" sagte der Fuchs. \"Aber du darfst sie nicht vergessen.\""
+  og_image: images/tailbliss-cover.png
+  moto: "Herzlich Willkommen auf der Homepage der Familie Kienzler!"
+  description: "Wir wünschen Ihnen viel Vergnügen auf unseren Seiten!"
   disable_theme_toggle: false
   disable_stay_uptodate: true
 
   p1:
-    heading: "Our mission"
+    heading: ""
     image: "images/pages/our-mission.png"
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
-      - text: "Sollicitudin tristique eros erat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna. Sollicitudin tristique eroserat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna."
-      - text: "Rhoncus nisl, libero egestas diam fermentum dui. At quis tincidunt vel ultricies. Vulputate aliquet velit faucibus semper. Pellentesque in venenatis vestibulum consectetur nibh id. In id ut tempus egestas. Enim sit aliquam nec, a. Morbi enim fermentum lacus in. Viverra."
-        
+      - text: "(...) Und der kleine Prinz kam zum Fuchs zurück: \"Adieu\", sagte er. \"Adieu\" sagte der Fuchs. \"Hier mein Geheimnis. Es ist ganz einfach: Man sieht nur mit dem Herzen gut. Das Wesentliche ist für die Augen unsichtbar.\" "
+      - text: "\"Das Wesentliche ist für die Augen unsichtbar\" wiederholte der kleine Prinz, um es sich zu merken. (...) \"Die Menschen haben diese Wahrheit vergessen\" sagte der Fuchs. \"Aber du darfst sie nicht vergessen.\""
+      - text: "aus \"Der kleine Prinz\""
+      - text: "Antoine de Saint-Exupéry"
+
   p2:
     heading: "Just in time for Hacktoberfest with JIT Tailwind."
     image: "images/pages/hacktoberfest.jpg"
@@ -64,89 +66,96 @@ params:
 
   social_media:
     github:
-      enabled: true
+      enabled: false
       url: 'https://github.com/nusserstudios'
     facebook:
-      enabled: true
+      enabled: false
       url: 'https://facebook.com/nusserstudios'
     instagram:
       enabled: true
       url: 'https://instagram.com/nusserstudios'
     twitter:
-      enabled: true
+      enabled: false
       url: '@nusserstudios'
 
 menu:
   main:
-    - identifier: prose
-      name: Prose
-      url: /prose/
-      weight: 10
-    - identifier: about
-      name: About
-      url: /about/
-      weight: 20
-    - identifier: categories
-      pre: dropdown
-      name: Categories
-      weight: 30
-    - identifier: dropdown
+    - identifier: familie
       pre: complexdropdown
-      name: Dropdown
-      weight: 40
-    - identifier: contact
-      name: Contact
-      url: /contact/
-      weight: 50
-  categories:
-    - identifier: prose
-      name: Prose
-      url: /prose/
+      name: Die Familiensaga
       weight: 10
-    - identifier: about
-      name: About
-      url: /about/
-      weight: 20
-  dropdown:
-    - identifier: appearance
-      pre: stars # can be stars, comments or piechart
-      name: Appearance
+    - identifier: wurzeln
+      pre: dropdown
+      name: Die Wurzeln
       post: "Easy customization"
-      url: "#"
       weight: 10
-    - identifier: comments
+    - identifier: haus
+      name: Unser Haus
+      url: /haus/
+      weight: 20
+    - identifier: links
+      name: Links
+      url: /links/
+      weight: 30
+  familie:
+    - identifier: andreas
       pre: comments # can be stars, comments or piechart
-      name: Comments
+      name: Andreas
       post: "Check your latest comments"
       url: "#"
       weight: 20
-    - identifier: analytics
+    - identifier: karin
       pre: piechart # can be stars, comments or piechart
-      name: Analytics
+      name: Karin
       post: "Take a look at your statistics"
       url: "#"
       weight: 30
-  footer:
-    - identifier: about
-      name: About
-      url: /about/
-      weight: 10
-    - identifier: blog
-      name: Blog
-      url: /categories/blog/
-      weight: 20
-    - identifier: news
-      name: News
-      url: /categories/news/
-      weight: 30
-    - identifier: prose
-      name: Prose
-      url: /prose/
+    - identifier: cedric
+      pre: piechart # can be stars, comments or piechart
+      name: Cedric
+      post: "Take a look at your statistics"
+      url: "/familie/cedric/"
       weight: 40
-    - identifier: contact
-      name: Contact
-      url: /contact/
-      weight: 50
+    - identifier: sarah
+      pre: piechart # can be stars, comments or piechart
+      name: Sarah
+      post: "Take a look at your statistics"
+      url: "#"
+      weight: 40
+  wurzeln:
+    - identifier: kienzler
+      pre: piechart # can be stars, comments or piechart
+      name: Kienzler
+      post: "Take a look at your statistics"
+      url: "#"
+      weight: 10
+    - identifier: kury
+      pre: piechart # can be stars, comments or piechart
+      name: Kurt
+      post: "Take a look at your statistics"
+      url: "#"
+      weight: 20
+    - identifier: seifritz
+      pre: piechart # can be stars, comments or piechart
+      name: Seifritz
+      post: "Take a look at your statistics"
+      url: "#"
+      weight: 30
+    - identifier: boehler
+      pre: piechart # can be stars, comments or piechart
+      name: Böhler
+      post: "Take a look at your statistics"
+      url: "#"
+      weight: 40
+  footer:
+    - identifier: impressum
+      name: Impressum
+      url: /impressum/
+      weight: 10
+    - identifier: datenschutz
+      name: Datenschutzerklärung
+      url: /datenschutz/
+      weight: 20
 
 markup:
   goldmark:
@@ -159,25 +168,25 @@ taxonomies:
 
 privacy:
   disqus:
-    disable: false
+    disable: true
   googleAnalytics:
     anonymizeIP: true
-    disable: false
-    respectDoNotTrack: false
+    disable: true
+    respectDoNotTrack: true
     useSessionStorage: false
   instagram:
-    disable: false
+    disable: true
     simple: false
   twitter:
-    disable: false
+    disable: true
     enableDNT: false
     simple: false
   vimeo:
-    disable: false
+    disable: true
     enableDNT: false
     simple: false
   youtube:
-    disable: false
+    disable: true
     privacyEnhanced: true
 
 server:
